2014-04-22  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-23

	* pyatmlab/collocations.py(CollocatedDataset.collocate):

	- Fix bug causing collocations to be missed if in the last time or
	latitude bin
	- Make sure there are always at least two bins or binning will be
	problematic

	* pyatmlab/constants.py:

	- Added R, M_d, M_w

	* pyatmlab/datasets.py(TansoFTS):

	- More accurate pressure-to-elevation conversion
	
	* pyatmlab/local/datasets.py:

	- Fix TANSO path

	* pyatmlab/physics.py:

	- Add more accurate p2z-conversion, mostly stolen from atmlab

	* pyatmlab/tools.py:

	- For the validator, allow multiple validations

2014-04-11  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-22

	* pyatmlab/collocations.py:

	- Some small changes and bugfixes

	* pyatmlab/tools.py:

	- Added generic cat function for numpy.array or numpy.ma.array

2014-04-09  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-21

	* pyatmlab/collocations.py:

	- Add logging

	(CollocatedDataset.read_aggregated_pairs):

	- Iterate through aggregated pairs of granules

	(CollocatedDataset.collocate_period):

	- Collocate a longer period of time

	(CollocatedDataset.collocate):

	- Always return ndarray
	- Fix bug, now using linspace rather than arange to create bins, to
	make sure all data are always contained by the bins.  Verify this
	explicitly, RuntimeError if it isn't.
	- Work with indices instead of copying data

	(CollocatedDataset._collocate_bucket):

	- Work with indices and always return ndarray

	* pyatmlab/dataset.py:

	- Add name attribute

	(Dataset.read):

	- Also accept pathlib.Path object

	* pyatmlab/datasets.py:

	(NDACCAmes.get_time_from_granule_contents):

	- Need to read entire granule for times, discovered that I can't trust
	the header

	(NDACCAmes._read), (ACEFTS._read):

	- Fix lons outside (-180, 80)

	* pyatmlab/geo.py:

	(shift_longitudes): Be more liberal in accepted data

	(valid_geo): Check if geo-data (lat/lon) are valid
